Name:          bam
Version:       0
License:       GPL
Cabal-Version: >= 1.6
Build-Type:    Simple
Category:      Bioinformatics
Author:        Ketil Malde
Maintainer:    Ketil Malde <ketil@malde.org>
Synopsis:      A program to extract various information from BAM alignmnet files

-- Library
--    Hs-Source-Dirs:  src
--    Exposed-Modules: Bio.SamTools.Classify

Executable bam
    Hs-Source-Dirs:  src
    Main-Is:         Bam.hs
--  Other-Modules:   Classify.hs
    Build-Depends:   base >= 4 && < 5, samtools-unsafe, samtools
    -- samtools > 0.2.0.1

